fix : swagger 수정 & CR API 생성
