# global/model/base_dto.go
@@ -1,0 +1,8 @@
+package model
+
+import "time"
+
+type BaseDate struct {
+	Created time.Time
+	Updated time.Time
+}
